fixed slider bug that added the gap at the bottom

--- a/src/CustomCSS/CustomSlider.css
+++ b/src/CustomCSS/CustomSlider.css
@@ -1,6 +1,6 @@
 /* Style the dots container */
 .slick-dots {
-    @apply absolute bottom-4 flex justify-center space-x-2;
+    @apply absolute bottom-6 flex justify-center space-x-2;
 }
 
 /* Style individual dot list items */
